# StereoHO

./: LICENSE  README.md  index.html  readme  robot_py2.yml
calib/cam1/: C_baseline.pkl
calib/cam2/: C_baseline.pkl
calib/robot2/: C_cam2gripper.pkl  C_target2base.pkl  cam_distCoeffs.pkl  cam_intrinsics.pkl
catkin_ws/: .gitignore
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/FastSAM/fastsam/: prompt.py
catkin_ws/src/frankmocap/: CMakeLists.txt  package.xml
catkin_ws/src/frankmocap/demo/: demo_handmocap.py  demo_handmocap_yik.py  demo_options.py  ros_node.py  visualiser.py
catkin_ws/src/frankmocap/demo/msg/: Hand2D.msg
catkin_ws/src/frankmocap/ihoi/nnutils/: hand_utils.py  handmocap.py  image_utils.py
catkin_ws/src/frankmocap/mocap_utils/: demo_utils.py
catkin_ws/src/frankmocap/msg/: MocapOutput.msg
catkin_ws/src/frankmocap/renderer/: visualizer.py
catkin_ws/src/frankmocap/scripts/: install_hand_detectors.sh
catkin_ws/src/main/: CMakeLists.txt
catkin_ws/src/main/launch/: benchmark_setup.launch  rs_cam.launch
catkin_ws/src/main/src/: imgmsg_converter.py  recording.py
catkin_ws/src/pytorch_6dof-graspnet/: CMakeLists.txt  grasp_estimator.py
catkin_ws/src/pytorch_6dof-graspnet/demo/: ros_srv.py
catkin_ws/src/pytorch_6dof-graspnet/msg/: Grasps.msg
catkin_ws/src/pytorch_6dof-graspnet/srv/: EstimateGrasps.srv
catkin_ws/src/pytorch_6dof-graspnet/utils/: utils.py
catkin_ws/src/realsense-ros/realsense2_camera/: CMakeLists.txt
catkin_ws/src/stereo_ho/configs/: paths.py  pvqvae_obman.yaml  pvqvae_snet.yaml  rand_tf_obman_code_joint.yaml
catkin_ws/src/stereo_ho/datasets/: base_dataset.py  dataloader.py  obman_dataset.py
conda_envs/: 6dofgraspnet.yml  frankmocap.yml  stereoho.yml
(+21 files in other folders)
